src/styles/base/_forms.scss
// ---------------------------------- \\
//             VARIABLES              \\
// ---------------------------------- \\

$input-height: $padding * 2;
$icon-width: $input-height;
$label-height: $input-height * 0.75;
$help-text-height: $label-height;


// ---------------------------------- \\
//              LAYOUT                \\
// ---------------------------------- \\

.form-group {
  display: grid;
  grid-template-rows: auto $input-height auto;
  grid-template-columns: $icon-width 1fr $icon-width;
  grid-template-areas:
    "label label label"
    "input-left-icon input input-right-icon"
    "help-text help-text help-text";
  align-content: start;
}

.form-group__label {
  grid-area: label;
}

.form-group__input {
  grid-area: input-left-icon / input-left-icon / input-right-icon / input-right-icon;
}

.form-group__input-icon {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}

.form-group__input-icon--left {
  grid-area: input-left-icon;
}

.form-group__input-icon--right {
  grid-area: input-right-icon;
}

.form-group__help-block {
  grid-area: help-text;
}

.form-group--checkbox,
.form-group--radio {
  grid-template-rows: ($label-height - $half-padding) $input-height;
  grid-template-columns: auto;
  grid-auto-rows: $input-height;
  grid-template-areas:
    "label"
    "inputs";
  grid-row-gap: $half-padding;
  justify-content: start;

  .form-group__input {
    grid-area: auto;
    display: grid;
    grid-template-rows: $input-height;
    grid-template-columns: $icon-width auto;
    grid-template-areas: "input label";
    align-items: center;
  }
}

.form-group__checkbox,
.form-group__radio {
  grid-area: input;
  justify-self: center;
}

.form-group__checkbox-label,
.form-group__radio-label {
  grid-area: label;
}

.form-group--textarea {
  grid-template-rows:
    auto
    $input-height
    minmax(#{($input-height * 2) + $half-padding}, auto)
    auto;
  grid-template-areas:
    "label           label     label"
    "input-left-icon .         input-right-icon"
    "input           input     input"
    "help-text       help-text help-text";

  .form-group__input {
    grid-row: 2 / -2;
    grid-column: 1 / -1;
    padding-top: $quarter-padding;
    padding-bottom: $quarter-padding;
  }
}

.form-group--file {
  grid-template-rows:
    auto
    auto
    auto;
  grid-template-columns: auto;
  grid-template-areas:
    "label"
    "input"
    "help-text";

  .form-group__input {
    grid-area: input;
    display: grid;
    grid-template-rows:
      $input-height / 2
      $input-height * 2
      $label-height
      $input-height / 2;
    grid-template-areas:
      "."
      "icon"
      "text"
      ".";
    justify-items: center;
    align-items: center;
  }
}

.form-group__file-icon {
  grid-area: icon;
}

.form-group__file-label {
  grid-area: text;
}

.form-group--select {
  &:before,
  &:after {
    grid-area: input-right-icon;
    align-self: center;
    justify-self: center;
  }
}


// ---------------------------------- \\
//              DISPLAY               \\
// ---------------------------------- \\

.form-group {
  position: relative;
  margin-bottom: $padding + $half-padding;

  &--info {
    .form-group__input {
      border-color: $color-info;
      background-color: lighten($color-info, 45%);
    }

    .form-group__input-icon {
      color: $color-info;
    }
  }

  &--warning {
    .form-group__input {
      border-color: $color-warning;
      background-color: lighten($color-warning, 37%);
    }

    .form-group__input-icon {
      color: $color-warning;
    }
  }


  &--danger {
    .form-group__input {
      border-color: $color-danger;
      background-color: lighten($color-danger, 45%);
    }

    .form-group__input-icon {
      color: $color-danger;
    }
  }


  &--success {
    .form-group__input {
      border-color: $color-success;
      background-color: lighten($color-success, 45%);
    }

    .form-group__input-icon {
      color: $color-success;
    }
  }

  &--disabled .form-group__input-icon {
    color: $light-text-color;
  }
}

.form-group__input {
  appearance: none;
  display: block;
  max-width: 100%;
  padding: 0 $half-padding;
  line-height: $input-height;
  font: $p;
  color: $text-color;
  background-color: $input-background-color;
  border: $border;
  border-radius: $border-radius;
  transition: all $golden-transition-duration $smooth-ease;

  .form-group--checkbox &,
  .form-group--radio & {
    padding: 0 $half-padding 0 0;
  }

  .form-group--file & {
    color: $light-text-color;

    &:hover {
      color: $link-color
    }
  }

  &::placeholder {
    color: $light-text-color;
  }

  &:hover,
  &.form-group__input--hover {
    border-color: lighten($color-secondary, 20%);
  }

  &:focus,
  &.form-group__input--focus {
    background-color: #fff;
    border-color: $color-secondary;
    box-shadow: 0 0 20px -5px $color-secondary;
    outline: none;
  }

  &.disabled,
  &[disabled] {
    color: $light-text-color;
    background-color: $lighter-gray;
    cursor: not-allowed;

    &:hover {
      border: $border;
    }
  }

  &.readonly,
  &[readonly] {
    background-color: transparent;
    border: none;

    &:focus {
      box-shadow: none;
    }
  }

  &--icon-l {
    padding-left: $input-height;
  }

  &--icon-r {
    padding-right: $input-height;
  }

  &--icon-lr {
    padding-left: $input-height;
    padding-right: $input-height;
  }
}

.form-group__input-icon {
  font-size: 0.8em;
  color: $light-text-color;

  &--success {
    color: $color-success;
  }

  &--danger {
    color: $color-danger;
  }

  &--required {
    color: $color-info;
    font-size: 0.6em;
  }
}

.form-group__help-block {
  display: inline-block;
  font: $h6;
  line-height: $help-text-height;
  color: $light-text-color;

  &--info {
    color: $color-info;
  }

  &--success {
    color: $color-success;
  }

  &--danger {
    color: $color-danger;
  }
}

.form-group--select {

  &:before,
  &:after {
    content: "";
    position: relative;
    border-style: solid;
    border-width: 0.4rem 0.25rem;
    border-radius: $border-radius;
    transition: border-color $transition-duration $smooth-ease;
  }

  &:before {
    top: 0.5rem;
    border-color: $light-text-color transparent transparent transparent;
  }

  &:after {
    top: -0.5rem;
    border-color: transparent transparent $light-text-color transparent;
  }
}

.form-group__file {
  position: absolute;
  opacity: 0;
  visibility: hidden;
}

.form-group__file-icon {
  font-size: 4em;
  line-height: 4rem;
}

